# NoBloatPDF

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: macos-build.yml
scripts/: check-jsc-apis.js  check-smoke-screenshot.mjs  denest-viewer-css.mjs  find-window-id.swift  gen-lightdark-fallback.mjs  run-jsc.swift  test-webkit-compat.mjs
src/: about.css  about.html  about.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/signing/: metadata.json  sign.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsi
src/web/: lightdark-fallback.css  nobloat.css  nobloat.js  nobloat.lightdark-fallback.css  polyfills.js  viewer.css  viewer.html  viewer.lightdark-fallback.css  viewer.mjs
src/web/locale/en-US/: viewer.ftl
