[package]
name = "no-bloat-pdf"
version = "1.2.1"
description = "Minimal, fast, branded PDF viewer"
authors = ["Brian Galvan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "no_bloat_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
# Already in the tree via tauri's url dependency; used to decode the
# save-target path header of the save_pdf command.
percent-encoding = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

